--- a/Farmaluxa/app/src/main/res/drawable/ic_user.xml
+++ b/Farmaluxa/app/src/main/res/drawable/ic_user.xml
@@ -2,12 +2,9 @@
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:viewportHeight="24"
+    android:tint="?attr/colorControlNormal">
   <path
-      android:pathData="M0,0h24v24h-24z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M16,8C16,10.21 14.21,12 12,12C9.79,12 8,10.21 8,8C8,5.79 9.79,4 12,4C14.21,4 16,5.79 16,8ZM4,18C4,15.34 9.33,14 12,14C14.67,14 20,15.34 20,18V20H4V18Z"
-      android:fillColor="#BFD3FF"
-      android:fillType="evenOdd"/>
+      android:fillColor="@android:color/white"
+      android:pathData="M12,12c2.21,0 4,-1.79 4,-4s-1.79,-4 -4,-4 -4,1.79 -4,4 1.79,4 4,4zM12,14c-2.67,0 -8,1.34 -8,4v2h16v-2c0,-2.66 -5.33,-4 -8,-4z"/>
 </vector>
