--- a/Farmaluxa/sharedutil/src/main/res/values/colors.xml
+++ b/Farmaluxa/sharedutil/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="indigo_400">#5c84ff</color>
+    <color name="indigo_400_dark">#0058cb</color>
+
+    <color name="black">#FF000000</color>
+    <color name="white">#FFFFFFFF</color>
+
 
     <color name="blue_login">#5C84FF</color>
+    <color name="blue_icon">#BFD3FF</color>
 
 </resources>
