--- a/Farmaluxa/sharedutil/src/main/res/values/dimen.xml
+++ b/Farmaluxa/sharedutil/src/main/res/values/dimen.xml
@@ -3,8 +3,12 @@
     <dimen name="dimen_five">5dp</dimen>
     <dimen name="dimen_ten">10dp</dimen>
     <dimen name="dimen_fifteen">15dp</dimen>
+    <dimen name="dimen_twenty">20dp</dimen>
+    <dimen name="dimen_thirty">30dp</dimen>
 
-
-    <dimen name="txt_thirty_five">35sp</dimen>
+    <dimen name="txt_fifteen">15sp</dimen>
+    <dimen name="txt_seventeen">17sp</dimen>
     <dimen name="txt_twenty">20sp</dimen>
+    <dimen name="txt_thirty_five">35sp</dimen>
+
 </resources>
