--- a/Farmaluxa/sharedutil/src/main/res/values/colors.xml
+++ b/Farmaluxa/sharedutil/src/main/res/values/colors.xml
@@ -10,4 +10,9 @@
     <color name="blue_login">#5C84FF</color>
     <color name="blue_icon">#BFD3FF</color>
 
+
+    <color name="blue_header">#5C84FF</color>
+    <color name="chip_background">#BFD3FF</color>
+    <color name="indigo_50_reset">#e8eaf6</color>
+
 </resources>
