--- a/Farmaluxa/app/src/main/res/layout/fragment_login.xml
+++ b/Farmaluxa/app/src/main/res/layout/fragment_login.xml
@@ -103,6 +103,7 @@
 
 
     <TextView
+        android:id="@+id/tvSignUp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
