--- a/Farmaluxa/app/src/main/res/layout/fragment_login.xml
+++ b/Farmaluxa/app/src/main/res/layout/fragment_login.xml
@@ -62,7 +62,8 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:inputType="textNoSuggestions|text" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -82,7 +83,8 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:inputType="textPassword"/>
 
     </com.google.android.material.textfield.TextInputLayout>
     
@@ -110,6 +112,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:gravity="center"
+        android:clickable="true"
         android:fontFamily="@font/bevietnampro_bold"
         android:layout_margin="@dimen/dimen_fifteen"
         android:textSize="@dimen/txt_seventeen"
