--- a/Farmaluxa/sharedutil/src/main/res/layout/item_header_requisition_layout.xml
+++ b/Farmaluxa/sharedutil/src/main/res/layout/item_header_requisition_layout.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/blue_header"
+    android:background="@color/blue_primary"
     android:padding="@dimen/dimen_sixteen">
 
     <ImageButton
