--- a/Farmaluxa/warehouse/src/main/res/layout/fragment_requisition_wh.xml
+++ b/Farmaluxa/warehouse/src/main/res/layout/fragment_requisition_wh.xml
@@ -6,24 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".ui.view.requisition.RequisitionWhFragment">
 
-    <include
-        android:id="@+id/iHeaderLayout"
-        layout="@layout/item_header_requisition_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvRequisition"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iHeaderLayout"
+        app:layout_constraintTop_toBottomOf="parent"
         tools:itemCount="5"
         tools:listitem="@layout/item_recycler_requisition_wh_layout" />
 
