Servicio de login

--- a/Farmaluxa/app/src/main/res/layout/fragment_login.xml
+++ b/Farmaluxa/app/src/main/res/layout/fragment_login.xml
@@ -63,6 +63,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:text="my_user"
             android:inputType="textNoSuggestions|text" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -86,6 +87,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:text="my_pass"
             android:inputType="textPassword"/>
 
     </com.google.android.material.textfield.TextInputLayout>
