--- a/Farmaluxa/sharedutil/src/main/res/values/dimen.xml
+++ b/Farmaluxa/sharedutil/src/main/res/values/dimen.xml
@@ -9,15 +9,19 @@
     <dimen name="dimen_sixteen">16dp</dimen>
     <dimen name="dimen_eighteen">18dp</dimen>
     <dimen name="dimen_twenty">20dp</dimen>
+    <dimen name="dimen_twenty_four">24dp</dimen>
     <dimen name="dimen_twenty_eight">28dp</dimen>
     <dimen name="dimen_thirty">30dp</dimen>
+    <dimen name="dimen_thirty_three">33dp</dimen>
     <dimen name="dimen_forty_eight">48dp</dimen>
+    <dimen name="dimen_fifty_eight">58dp</dimen>
     <dimen name="dimen_sixty">60dp</dimen>
     <dimen name="dimen_seventy">70dp</dimen>
     <dimen name="dimen_seventy_three">73dp</dimen>
     <dimen name="dimen_one_hundred_twenty">120dp</dimen>
     <dimen name="dimen_one_hundred_twenty_eight">128dp</dimen>
 
+    <dimen name="txt_teen">10sp</dimen>
     <dimen name="txt_fourteen">14sp</dimen>
     <dimen name="txt_fifteen">15sp</dimen>
     <dimen name="txt_sixteen">16sp</dimen>
