--- a/Farmaluxa/sharedutil/src/main/res/values/themes.xml
+++ b/Farmaluxa/sharedutil/src/main/res/values/themes.xml
@@ -14,6 +14,8 @@
         <!-- Customize your theme here. -->
 
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
+
+        <item name="android:navigationBarColor">@color/black</item>
     </style>
 
     <style name="toolbar_header" parent="@style/Base.TextAppearance.AppCompat.Title">
@@ -27,4 +29,10 @@
         <item name="color">@android:color/white</item>
     </style>
 
+    <!-- Set parent theme as app theme. -->
+    <style name="DialogTheme" parent="Theme.Farmaluxa">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowIsFloating">false</item>
+    </style>
 </resources>
