--- a/Farmaluxa/warehouse/src/main/res/navigation/navigation_warehose_graph.xml
+++ b/Farmaluxa/warehouse/src/main/res/navigation/navigation_warehose_graph.xml
@@ -9,4 +9,10 @@
         android:id="@+id/requisitionWhFragment"
         android:name="com.mx.farmaluxa.warehouse.ui.view.requisition.RequisitionWhFragment"
         tools:layout="@layout/fragment_requisition_wh" />
+
+    <dialog
+        android:id="@+id/newProductFragment"
+        android:name="com.mx.farmaluxa.warehouse.ui.view.product.NewProductFragment"
+        android:label="fragment_new_product"
+        tools:layout="@layout/fragment_new_product" />
 </navigation>
