Implementacion Vista Filtrado de Operaciones

--- a/Farmaluxa/warehouse/src/main/res/layout/item_new_products_layout.xml
+++ b/Farmaluxa/warehouse/src/main/res/layout/item_new_products_layout.xml
@@ -9,11 +9,94 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/glV1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent=".3" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/glV2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent=".7" />
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/clImagePreviewContainer"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="@dimen/dimen_twenty_four"
+            android:background="@color/background_no_image"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toEndOf="@id/glV2"
+            app:layout_constraintStart_toStartOf="@id/glV1"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/ivNoImage"
+                android:layout_width="@dimen/dimen_fifty_eight"
+                android:layout_height="0dp"
+                android:contentDescription="@string/desc_add_products"
+                android:scaleType="center"
+                android:src="@drawable/ico_add_image"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="ImageContrastCheck" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tvNoImage"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/bevietnampro_semi_bold"
+                android:gravity="center"
+                android:text="@string/str_no_image_product"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/txt_teen"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/ivNoImage"
+                app:layout_constraintVertical_bias="0.13"
+                tools:ignore="TextContrastCheck" />
+
+            <ImageView
+                android:id="@+id/ivProductImagePreview"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:contentDescription="@string/desc_add_products"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="ImageContrastCheck" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tvSelectImage"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_fifteen"
+            android:fontFamily="@font/bevietnampro_bold"
+            android:gravity="center"
+            android:text="@string/str_no_image_product"
+            android:textColor="@color/color_blue_controls"
+            android:textSize="@dimen/txt_fourteen"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/clImagePreviewContainer" />
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tilUserName"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_forty_eight"
             android:layout_marginStart="@dimen/dimen_twenty_four"
             android:layout_marginEnd="@dimen/dimen_twenty_four"
             android:background="@color/white"
@@ -26,7 +109,7 @@
             app:boxStrokeWidth="@dimen/dimen_two"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/tvSelectImage">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etUserName"
@@ -119,6 +202,7 @@
                 android:id="@+id/etLaboratory"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:imeOptions="actionDone"
                 android:inputType="textNoSuggestions|text"
                 tools:ignore="TextContrastCheck" />
 
@@ -323,6 +407,7 @@
                 android:id="@+id/etSellCost"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:imeOptions="actionDone"
                 android:inputType="textNoSuggestions|text"
                 tools:ignore="TextContrastCheck" />
 
