--- a/Farmaluxa/sharedutil/src/main/res/values/dimen.xml
+++ b/Farmaluxa/sharedutil/src/main/res/values/dimen.xml
@@ -4,10 +4,12 @@
     <dimen name="dimen_five">5dp</dimen>
     <dimen name="dimen_eight">8dp</dimen>
     <dimen name="dimen_ten">10dp</dimen>
+    <dimen name="dimen_twelve">12dp</dimen>
     <dimen name="dimen_fourteen">14dp</dimen>
     <dimen name="dimen_fifteen">15dp</dimen>
     <dimen name="dimen_sixteen">16dp</dimen>
     <dimen name="dimen_eighteen">18dp</dimen>
+    <dimen name="dimen_nineteen">19dp</dimen>
     <dimen name="dimen_twenty">20dp</dimen>
     <dimen name="dimen_twenty_four">24dp</dimen>
     <dimen name="dimen_twenty_eight">28dp</dimen>
@@ -22,6 +24,7 @@
     <dimen name="dimen_one_hundred_twenty_eight">128dp</dimen>
 
     <dimen name="txt_teen">10sp</dimen>
+    <dimen name="txt_twelve">12sp</dimen>
     <dimen name="txt_fourteen">14sp</dimen>
     <dimen name="txt_fifteen">15sp</dimen>
     <dimen name="txt_sixteen">16sp</dimen>
